--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,9 @@ trigger:
 - '*'
 
 pool:
-  vmImage: 'ubuntu-16.04'
+  name: 'MyAgentPool'
   demands:
-    - npm
+  - npm
 
 variables:
   buildConfiguration: 'Release'
